dev/2traefik/traefik-middleware-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: ingress-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
