dev/2traefik/traefik-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ingress-system
  labels:
    app: traefik
spec:
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
    - name: admin
      port: 8080
    - name: metrics
      port: 8888
      targetPort: 8080
  selector:
    app: traefik
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: ingress-system
  labels:
    app: traefik
spec:
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1 #升级过程中最多有多少个POD处于无法提供服务的状态
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 1
      containers:
        - image: traefik:v2.5.4
          name: traefik-ingress-lb
          ports:
            - name: web
              containerPort: 80
              hostPort: 80         ## 将容器端口绑定所在服务器的 80 端口
            - name: websecure
              containerPort: 443
              hostPort: 443        ## 将容器端口绑定所在服务器的 443 端口
            - name: admin
              hostPort: 8080
              containerPort: 8080  ## Traefik Dashboard 端口
            - name: redis
              hostPort: 6379
              containerPort: 6379
            - name: tcp
              hostPort: 3101
              containerPort: 3101
            - name: websocket
              hostPort: 3102
              containerPort: 3102
            - name: mongo
              hostPort: 27017
              containerPort: 27017
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --configfile=/config/traefik.yaml
          volumeMounts:
            - mountPath: "/ssl"
              name: "ssl"
            - mountPath: "/config"
              name: "config"
            - name: app-logs
              mountPath: /log
            - name: tz-config
              mountPath: /etc/localtime
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
        - image: elastic/filebeat:7.10.1
          name: filebeat
          args: [
              "-c", "/etc/filebeat/filebeat.yml",
              "-e",
          ]
          volumeMounts:
            - name: app-logs
              mountPath: /usr/share/filebeat/app/logs
            - name: filebeat-traefik-config
              mountPath: /etc/filebeat/
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: ssl
          secret:
            secretName: traefik-cert
        - name: config
          configMap:
            name: traefik-config
        - name: app-logs
          emptyDir: {}
        - name: filebeat-traefik-config
          configMap:
            name: filebeat-traefik-config
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      tolerations: ## 设置容忍所有污点，防止节点被设置污点
        - operator: "Exists"
      nodeSelector: ## 设置node筛选器，在特定label的节点上启动
        edgenode: "true"
